# CON-SAI

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Readme.md  Tutorial.md
ai_controller/: CMakeLists.txt  package.xml
ai_controller/scripts/: ai_controller.py
ai_controller/test/: test_ai_controller.py
ai_core/: CMakeLists.txt  package.xml
ai_core/launch/: ai_core.launch  enemy.launch  real.launch  robot.launch  simulator.launch  test_ai_core.launch  test_real.launch  test_robot.launch  test_simulator.launch
ai_core/param/: our_team.yaml
avoiding_point_generator/: CMakeLists.txt  package.xml
avoiding_point_generator/cfg/: point_generator.cfg
avoiding_point_generator/src/: avoiding_point_generator_node.cpp  transformation.h
avoiding_point_generator/test/: test_avoiding_point_generator.py
behavior_tree_visualizer/: CMakeLists.txt  package.xml  plugin.xml  setup.py
behavior_tree_visualizer/resource/: rqt_dot.ui
behavior_tree_visualizer/scripts/: behavior_tree_visualizer
behavior_tree_visualizer/src/behavior_tree_visualizer/: btv.py
consai_msgs/: CMakeLists.txt  package.xml
consai_msgs/msg/: AIStatus.msg  FieldCircularArc.msg  FieldLineSegment.msg  FixedVisionPackets.msg  GeometryFieldSize.msg  RefereeTeamInfo.msg  ReplaceBall.msg  ReplaceRobot.msg  TestAICommand.msg  VisionData.msg  VisionIDList.msg  VisionObservations.msg  VisionPacket.msg  nodeData.msg  nodeDataArray.msg  robot_commands.msg
decision_making/: CMakeLists.txt  package.xml
decision_making/scripts/: AIParent.py  Analyst.py  AnalystTool.py  Attacker.py  BaseSkill.py  CheckRefboxCommand.py  ComboSkill.py  Defender.py  DirectEnemy.py  DirectFriend.py  Forcestart.py  GlobalData.py  GoalEnemy.py  GoalFriend.py  GoalKeeper.py  Halt.py  IDLinker.py  InPlay.py  IndirectEnemy.py  IndirectFriend.py  Kick.py  KickoffEnemy.py  KickoffFriend.py  PenaltyEnemy.py  PenaltyFriend.py  SkillBook.py  Stopgame.py  TimeoutEnemy.py  TimeoutFriend.py  Tool.py  assignor.py  command.py  constants.py  coordinate.py  decision_making_node.py  formation.py  observer.py  play_executer.py  play_manager.py  playbook.py  (+2 more)
decision_making/scripts/TestMove/: TestParent.py  TestPattern.py
decision_making/scripts/plays/: play_ball_placement.py  play_base.py  play_book.py  play_direct.py  play_dummy.py  play_force_start.py  play_halt.py  play_indirect.py  play_inplay.py  play_inplay_our_defence.py  play_inplay_their_defence.py  play_kickoff.py  play_kickoff_start.py  play_our_kickoff_start.py  play_our_penalty_start.py  play_our_pre_kickoff.py  play_our_pre_penalty.py  play_outside.py  play_pre_kickoff.py  play_stop.py  play_their_direct.py  play_their_indirect.py  play_their_kickoff_start.py  play_their_penalty_start.py  play_their_pre_kickoff.py  play_their_pre_penalty.py  role_base.py  test0.py  test_book.py
decision_making/scripts/plays/tactics/: stop.py  tactic_attacker.py  tactic_clear.py  tactic_command.py  tactic_dribble.py  tactic_formation.py  tactic_goalie.py  tactic_halt.py  tactic_inplay_shoot.py  tactic_interpose.py  tactic_intersection.py  tactic_keep.py  tactic_look_intersection.py  tactic_mark.py  tactic_pass.py  tactic_placement.py  tactic_position.py  (+5 more)
decision_making/scripts/proto/: referee_pb2.py
decision_making/scripts/tests/: test_assignor.py  test_coordinate.py  test_formation.py  test_observer.py  test_state.py  test_tactics_run.py  test_tool.py  test_world_model.py
decision_making/test/: test_decision_making.py
grsim_wrapper/: CMakeLists.txt  LICENSE  package.xml  parameter.txt
grsim_wrapper/scripts/: command_sender.py  detection.py  format_converter.py  grSim_Commands_pb2.py  grSim_Packet_pb2.py  grSim_Replacement_pb2.py  messages_robocup_ssl_detection_pb2.py  messages_robocup_ssl_geometry_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_wrapper_pb2.py  multicast.py
grsim_wrapper/scripts/lib/: format_converter.py  pose_maker.py
grsim_wrapper/scripts/tests/: test_format_converter.py  test_pose_maker.py
grsim_wrapper/test/: test_command_sender.py  test_detection.py
launch_manager/: CMakeLists.txt  package.xml
launch_manager/src/: launch_manager.py
launch_manager/test/: test_launch_manager.py
real_sender/: CMakeLists.txt  package.xml
real_sender/include/real_sender/: serializer.hpp
real_sender/src/: real_sender_node.cpp  serializer.cpp
real_sender/src/serializer/: serializer.cpp  serializer.hpp
real_sender/src/tests/: test_serializer.cpp
real_sender/test/: test_real_sender.py
sai_visualizer/: CMakeLists.txt  package.xml  plugin.xml  setup.py
sai_visualizer/resource/: visualizer_widget.ui
sai_visualizer/scripts/: sai_visualizer
sai_visualizer/src/sai_visualizer/: geometry.py  paint_widget.py  visualizer.py
ssl_joystick_operation/: CMakeLists.txt  package.xml  操作割り当て.txt
ssl_joystick_operation/launch/: ssl_joystick_operation.launch
ssl_joystick_operation/param/: ps3_config.yaml
ssl_joystick_operation/scripts/: joystick_node.py
ssl_refbox_wrapper/: CMakeLists.txt  package.xml  parameters.txt
ssl_refbox_wrapper/src/: multicast.py  referee_pb2.py  ssl_refbox_wrapper_node.py
ssl_refbox_wrapper/src/tests/: test_ssl_refbox_wrapper.py
ssl_refbox_wrapper/test/: test_ssl_refbox_wrapper.py
trapezoidal_control/: CMakeLists.txt  package.xml
trapezoidal_control/cfg/: controller.cfg
trapezoidal_control/include/: trapezoidal_controller.h
trapezoidal_control/src/: transformation.h  trapezoidal_control_node.cpp  trapezoidal_controller.cpp
trapezoidal_control/src/tests/: test_trapezoidal_controller.cpp
trapezoidal_control/test/: test_trapezoidal_control.py
velocity_transformer/: CMakeLists.txt  package.xml
velocity_transformer/src/: velocity_transformer.py
velocity_transformer/test/: test_velocity_transformer.py
world_observer/: CMakeLists.txt  package.xml
world_observer/include/world_observer/: ball_estimator.hpp  enemy_estimator.hpp  estimator.hpp
world_observer/src/: world_observer.cpp
world_observer/src/estimator/: ball_estimator.cpp  enemy_estimator.cpp  estimator.cpp
world_observer/test/: test_world_observer.py
(+34 files in other folders)
