<?xml version="1.0"?>
<package>
  <name>launch_manager</name>
  <version>0.0.0</version>
  <description>The launch_manager package</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>consai_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>consai_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
