<?xml version="1.0"?>
<package>
  <name>sai_visualizer</name>
  <version>0.0.0</version>
  <description>sai_visualizer provides a GUI plugin for displaying field objects and AI information.</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
