<?xml version="1.0"?>
<package>
  <name>ssl_refbox_wrapper</name>
  <version>0.0.0</version>
  <description>The ssl_refbox_wrapper package</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
