<?xml version="1.0"?>
<package>
  <name>velocity_transformer</name>
  <version>0.0.0</version>
  <description>The velocity_transformer package</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
